# InfinityDrive

./: .~lock.rapport.odt#  CMakeLists.txt  main.cpp
1_CORE/: CMakeLists.txt
1_CORE/Box/: CMakeLists.txt
1_CORE/Box/doc/: CMakeLists.txt  Doxyfile-html.cmake
1_CORE/Box/include/: Box.hpp  HitBox.hpp
1_CORE/Box/src/: Box.cpp  HitBox.cpp
1_CORE/Control/: CMakeLists.txt
1_CORE/Control/doc/: CMakeLists.txt  Doxyfile-html.cmake
1_CORE/Control/include/: CamControl.hpp  GameControl.hpp
1_CORE/Control/src/: CamControl.cpp  GameControl.cpp
1_CORE/File/include/: FileBrowse.hpp
1_CORE/Menu/: CMakeLists.txt
1_CORE/Menu/doc/: CMakeLists.txt  Doxyfile-html.cmake
1_CORE/Menu/include/: Button.hpp  Menu.hpp  TtfManager.hpp
1_CORE/Menu/src/: Button.cpp  Menu.cpp  TtfManager.cpp
1_CORE/Scene/include/: Object.hpp  Scene.hpp  SceneNode.hpp
1_CORE/Scene/src/: Object.cpp  Scene.cpp  SceneNode.cpp
2_VISU/: CMakeLists.txt
2_VISU/Camera/: CMakeLists.txt
2_VISU/Camera/doc/: CMakeLists.txt  Doxyfile-html.cmake
2_VISU/Camera/include/: Camera.hpp
2_VISU/Camera/src/: Camera.cpp
2_VISU/Mesh/include/: Model.hpp  mesh.hpp
2_VISU/Mesh/src/: Model.cpp  mesh.cpp
2_VISU/Object/: CMakeLists.txt
2_VISU/Object/include/: Object.hpp
2_VISU/Scene/: CMakeLists.txt
2_VISU/Scene/doc/: CMakeLists.txt  Doxyfile-html.cmake
2_VISU/Scene/include/: Model.hpp  Object.hpp  Scene.hpp  SceneNode.hpp  mesh.hpp
2_VISU/Scene/src/: Model.cpp  Object.cpp  Scene.cpp  SceneNode.cpp  mesh.cpp
2_VISU/Shaders/: CMakeLists.txt
2_VISU/Shaders/doc/: CMakeLists.txt  Doxyfile-html.cmake
2_VISU/Shaders/include/: MyShader.hpp  Program.hpp  Shader.hpp
2_VISU/Shaders/src/: MyShader.cpp  Shader.cpp
2_VISU/Texture/: CMakeLists.txt
2_VISU/Texture/doc/: CMakeLists.txt  Doxyfile-html.cmake
2_VISU/Texture/include/: Image.hpp  InfPlane.hpp  Skybox.hpp
2_VISU/Texture/src/: Image.cpp  InfPlane.cpp  Skybox.cpp
3_EXT_INCLUDES/: CMakeLists.txt
3_EXT_INCLUDES/Window/: CMakeLists.txt
3_EXT_INCLUDES/Window/include/: SDLTtfManager.hpp
3_EXT_INCLUDES/Window/src/: SDLWindowManager.cpp
3_EXT_INCLUDES/include/: Shader.hpp
3_EXT_INCLUDES/src/: Program.cpp
4_MAIN/: main.cpp
CORE/: CMakeLists.txt
CORE/Box/include/: Camera.hpp
CORE/File/: CMakeLists.txt
CORE/File/include/: FileBrowse.hpp
CORE/File/src/: FileBrowse.cpp
CORE/Scene/: CMakeLists.txt
CORE/Scene/include/: Scene.hpp  SceneNode.hpp
EXT_INCLUDES/: CMakeLists.txt
EXT_INCLUDES/src/: SDLWindowManager.cpp
FileBrowse/: CMakeLists.txt
Lib/: CMakeLists.txt
Lib/HitBox/: CMakeLists.txt
Lib/HitBox/include/: Box.hpp
Lib/HitBox/src/: HitBox.cpp
Lib/Program/: CMakeLists.txt
Lib/SDLWindow/: CMakeLists.txt
Lib/SDLWindow/include/: SDLWindowManager.hpp
Lib/SDLWindow/src/: SDLWindowManager.cpp
Lib/include/: HitBox.hpp  Image.hpp  SDLTtfManager.hpp  SDLWindowManager.hpp
Lib/src/: Box.cpp  Image.cpp
LibQueue/: CMakeLists.txt
LibQueue/include/: ObjQueue.hpp  Queue.hpp  QueueObj.hpp  Scene.hpp  SceneNode.hpp  mesh.hpp
LibQueue/src/: Queue.cpp  QueueObj.cpp  Scene.cpp  SceneNode.cpp
Libmacrun/include/: Box.hpp  Object.hpp  SDLTtfManager.hpp  Shapes.hpp  camera.hpp
Libmacrun/src/: Object.cpp  SDLTtfManager.cpp  Shapes.cpp  camera.cpp
MAIN/: main.cpp
Main/: CMakeLists.txt  main.cpp
VISU/: CMakeLists.txt
VISU/Camera/include/: Camera.hpp  camera.hpp
VISU/Camera/src/: Camera.cpp
VISU/Mesh/: CMakeLists.txt
VISU/Mesh/include/: mesh.hpp
VISU/Mesh/src/: mesh.cpp
VISU/Object/: CMakeLists.txt
VISU/Object/include/: Object.hpp
VISU/Shaders/: CMakeLists.txt
VISU/Shaders/include/: Program.hpp  Shader.hpp
VISU/Texture/include/: Image.hpp  Skybox.hpp
VISU/Texture/src/: Skybox.cpp
ressources/assets/: CAR.mtl  car.vmrn
ressources/shaders/: fragshade.fs.glsl  maingame.fs.glsl  skybox.fs.glsl  skybox.vs.glsl  triangle.fs.glsl  triangle.vs.glsl  vertshade.vs.glsl
ressources/textures/Burst/: Obstacle1.xcf
